src/test/deca/context/invalid/resultats/test10_ifThenElse-cont.res
./src/test/deca/context/invalid/test10_ifThenElse.deca:15:4: Condition's type must be boolean (current : int).
